# send-easy

./: .env.sample  README.md  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
blog/migrations/: 0001_initial.py  0002_remove_article_image_article_preview.py  0003_alter_article_content.py
blog/templates/blog/: article_detail.html  article_form.html  article_list.html
config/: settings.py  urls.py
fixtures/: auth.json
fixtures/blog/: articles.json
fixtures/sender/: clients.json
sender/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  utils.py  views.py
sender/management/commands/: fill_clients.py  send_mailing.py
sender/migrations/: 0001_initial.py  0002_alter_client_options_alter_mailing_options_and_more.py  0002_client_owner_mailing_owner_text_owner.py  0003_alter_mailing_options_alter_client_owner_and_more.py  0003_alter_mailing_periodicity.py  0004_rename_clinents_mailing_clients.py  0005_alter_mailing_status_alter_text_body_attempt.py  0006_alter_attempt_mailing_alter_attempt_response_and_more.py  0007_remove_attempt_response_attempt_response_code_and_more.py  0008_remove_mailing_started_at_mailing_end_datetime_and_more.py  0009_alter_attempt_options_alter_mailing_end_datetime.py
sender/static/css/: scroll_table.css
static/django_ckeditor_5/: my_style.css
templates/: base.html
templates/includes/: main_menu.html  theme_button.html
users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_alter_user_options.py
(+21 files in other folders)
