[tool.poetry]
name = "send-easy"
version = "0.1.0"
description = ""
authors = ["Anton Pashinov <troxin1988@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.9"
psycopg2-binary = "^2.9.9"
django-ckeditor-5 = "^0.2.13"
pytz = "^2024.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.26.0"
django-debug-toolbar = "^4.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
